--- a/2025-05-11/test_makefile/Makefile
+++ b/2025-05-11/test_makefile/Makefile
@@ -4,23 +4,20 @@ CC = gcc
 # 编译选项
 CFLAGS = -Wall -g
 
-# 目标文件
-OBJS = main.o utils.o
+# 源文件和目标文件
+SRC = $(wildcard *.c)
+OBJ = $(patsubst %.c,%.o,$(SRC))
 
 # 目标程序名
-TARGET = app
+TARGET = test
 
-# 默认目标
-all: $(TARGET)
+$(TARGET): $(OBJ)
+	$(CC) $(CFLAGS) -o $(TARGET) $(OBJ)
 
-# 链接目标程序
-$(TARGET): $(OBJS)
-	$(CC) $(CFLAGS) -o $(TARGET) $(OBJS)
-
-# 编译每个源文件
 %.o: %.c
 	$(CC) $(CFLAGS) -c $< -o $@
 
 # 清理目标
 clean:
-	rm -f $(OBJS) $(TARGET)
+	rm -f $(OBJ) $(TARGET)
+
